# Mori

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  antispider.py  apis.json  decrypt.py  mori.py  mori_antispider.py  mori_decrypt.py  mori_v_0_7.py  printer.py  proxy.py  pyproject.toml  reporter.py  requirements.txt
.github/workflows/: main.yaml  multi-python.yaml  py37.yaml  py38.yaml
antispider/: base_antispider.py  mori_antispider.py
decrypt/: base_decrypt.py  mori_decrypt.py
test/: __init__.py  test_main.py  test_utils.py
utils/: __init__.py  config_hadnler.py  data_processor.py  http_tools.py  rich_tools.py  send_mail.py
